src/objects/PSCommFooterPrimaryLink__c.object
<CustomObject>
    <fields>
        <fullName>Community_Footer_Config__c</fullName>
        <label>Community Footer Config</label>
        <referenceTo>PSCommFooterConfig__c</referenceTo>
        <relationshipLabel>PSCommFooterPrimaryLink</relationshipLabel>
        <relationshipName>PSCommFooterPrimaryLink</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>PSCommFooterPrimaryLink</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>PSCommFooterPrimaryLink ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSCommFooterPrimaryLink</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>